--- a/.hintrc
+++ b/.hintrc
@@ -9,6 +9,12 @@
       {
         "aria-allowed-attr": "off"
       }
+    ],
+    "axe/forms": [
+      "default",
+      {
+        "label": "off"
+      }
     ]
   }
 }
