--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,11 +13,12 @@
     "sourceMap": true,
     "declaration": false,
     "experimentalDecorators": true,
-    "moduleResolution": "node",
+    "moduleResolution": "Bundler",
     "importHelpers": true,
     "target": "ES2022",
-    "module": "ES2022",
+    "module": "ESNext",
     "useDefineForClassFields": false,
+     "noUncheckedIndexedAccess": true,
     "lib": [
       "ES2022",
       "dom"
