--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
     "angular-cc-library": "^3.3.0",
+    "angularx-qrcode": "^17.0.1",
     "bootstrap": "^5.3.3",
     "eslint": "^9.1.1",
     "rxjs": "~7.8.0",
